--- a/client/directives/listContentLists/view.html
+++ b/client/directives/listContentLists/view.html
@@ -9,8 +9,8 @@
     </li>
     <div class="panel-info" ng-if="!contentLists.length">
         <div class="panel-info__icon">
-            <i class="big-icon--add-to-list" ng-if="!site.outputChannel"></i>
-            <i class="big-icon--web" ng-if="site.outputChannel"></i>
+            <i class="big-icon--add-to-list" ng-if="!site.output_channel"></i>
+            <i class="big-icon--web" ng-if="site.output_channel"></i>
         </div>
         <h3 class="panel-info__heading">&nbsp;</h3>
         <p class="panel-info__description">&nbsp;</p>
