--- a/client/directives/publishRoutes/view.html
+++ b/client/directives/publishRoutes/view.html
@@ -1,4 +1,6 @@
-<select class="sd-line-input__select" ng-model="destination.route.id"
-    ng-options="route.id as route.name for route in routes">
+<select
+  class="sd-line-input__select"
+  ng-model="destination.route.id"
+  ng-options="route.id as route.name group by route.type for route in routes"
+>
 </select>
-
