--- a/client/directives/listArticles/list-articles-detail.html
+++ b/client/directives/listArticles/list-articles-detail.html
@@ -14,12 +14,12 @@
     <div class="sd-list-item__column" ng-if="article.duplicate" sd-tooltip="duplicate">
         <i class="icon-warning-sign icon--red"></i>
     </div>
-    <div ng-if="!article.duplicate && article.content.featureMedia && article.content.featureMedia.image"
+    <div ng-if="!article.duplicate && article.content.feature_media && article.content.feature_media.image"
         class="sd-list-item__column sd-list-item__column--no-border sd-list-item__column--no-right-padding">
         <img ng-src="{{getThumbnail(article.content)}}"
             class="sd-list-item__thumbnail" style="max-width:60px">
     </div>
-    <div ng-if="!article.duplicate && article.featureMedia && article.featureMedia.image"
+    <div ng-if="!article.duplicate && article.feature_media && article.feature_media.image"
         class="sd-list-item__column sd-list-item__column--no-border sd-list-item__column--no-right-padding">
         <img ng-src="{{getThumbnail(article)}}"
             class="sd-list-item__thumbnail" style="max-width:60px">
