Settings - theme list improvements

--- a/client/directives/themeManager/themeManager-details.html
+++ b/client/directives/themeManager/themeManager-details.html
@@ -1,5 +1,5 @@
 <div class="wizardThemeDetails">
-  <div class="wizardThemeDetails__header bg--white">
+  <div class="wizardThemeDetails__header">
     <button
       class="icn-btn"
       ng-click="closeThemeDetails()"
@@ -44,7 +44,7 @@
         </span>
       </div>
       <div class="grid__item grid__item--col-8">
-        <h4 class="bottomMargin">{{ theme.title }}</h4>
+        <h3 class="bottomMargin">{{ theme.title }}</h3>
         <p>{{ theme.description }}</p>
       </div>
     </div>
