--- a/client/directives/themeManager/index.html
+++ b/client/directives/themeManager/index.html
@@ -7,7 +7,7 @@
   >
 </div>
 <div
-  class="flex-grid flex-grid--boxed flex-grid--wrap-items"
+  class="flex-grid flex-grid--boxed flex-grid--wrap-items flex-grid--large-3 flex-grid--xlarge-4"
   ng-class="{'flex-grid--small-2' : grid == '2', 'flex-grid--small-4': grid == '4'}"
   ng-if="!themeDetailsActive"
 >
