--- a/client/directives/listContentLists/view.html
+++ b/client/directives/listContentLists/view.html
@@ -3,8 +3,9 @@
     <li class="sd-card__content-list-item sd-card__content-list-item--no-padding"
         ng-repeat="list in contentLists"
     >
-        <a ng-href="#/publisher/content_lists/{{site.code}}/{{list.id}}" class="sd-card__content-list-block-link sd-overflow-ellipsis">
+        <a ng-href="#/publisher/content_lists/{{site.code}}/{{list.id}}" class="sd-card__content-list-block-link sd-card__content-list-block-link--icon-hover sd-overflow-ellipsis">
             {{list.name}}
+            <i class="icon-pencil icon--dark-blue-grey"></i>
         </a>
     </li>
     <div class="panel-info" ng-if="!contentLists.length">
