React output control rewrite (#216)
* WIP

* WIP

* wip

* before switch to react-virtualized

* WIP

* WIP

* WIP

* swimlane

* wip

* WIP

* SWP-1786

Kanban UI layout fix

* unpublishing WIP

* WIP

* WIP

* WIP

* react output control, possible finish

* finito

* old controller removed

--- a/client/directives/gallery/view.html
+++ b/client/directives/gallery/view.html
@@ -18,7 +18,10 @@
       <div class="sd-media-carousel__page" ng-repeat="item in items">
         <figure style="width:100%">
           <div class="item-association__image-container">
-            <img ng-src="{{ item.renditions[0].href }}" style="max-width:100%" />
+            <img
+              ng-src="{{ item.renditions[0].href }}"
+              style="max-width:100%"
+            />
           </div>
         </figure>
       </div>
