--- a/client/directives/themeManager/index.html
+++ b/client/directives/themeManager/index.html
@@ -22,9 +22,7 @@
         <div class="title" translate>Drop Your Theme Here</div>
         <div class="upload-manual">
           <div class="or-label" translate>or</div>
-          <label class="btn" for="theme-input">{{
-            "Select from folder" | translate
-          }}</label>
+          <label class="btn" for="theme-input" translate>Select from folder</label>
           <input
             id="theme-input"
             type="file"
