--- a/client/directives/siteWizard/wizard.html
+++ b/client/directives/siteWizard/wizard.html
@@ -37,7 +37,7 @@
             ng-if="newSite.output_channel || newSite.pwa_config"
             class="form__row form__row--flex"
           >
-            <h4 class="text--light text--thin text--uppercase">
+            <h4 class="sd-text-color--light sd-text--light sd-txt-transform--uppercase">
               Superdesk Publisher tenant settings
             </h4>
           </div>
@@ -90,7 +90,7 @@
             </div>
           </div>
           <div ng-if="newSite.output_channel" class="form__row form__row--flex">
-            <h4 class="text--light text--thin text--uppercase">
+            <h4 class="sd-text-color--light sd-text--light sd-txt-transform--uppercase">
               {{ newSite.output_channel.type }} settings
             </h4>
           </div>
@@ -115,7 +115,7 @@
           </div>
 
           <div ng-if="newSite.pwa_config" class="form__row form__row--flex">
-            <h4 class="text--light text--thin text--uppercase">PWA settings</h4>
+            <h4 class="sd-text-color--light sd-text--light sd-txt-transform--uppercase">PWA settings</h4>
           </div>
           <div
             class="form__row form__row--flex"
